# cookiecutter-nomad-plugin

./: README.md  cookiecutter.json  tox.ini
.github/workflows/: run-checks.yml
hooks/: post_gen_project.py
nomad-{{cookiecutter.plugin_name}}/: MANIFEST.in  README.md  README.rst  mkdocs.yml  move_template_files.sh  pyproject.toml
nomad-{{cookiecutter.plugin_name}}/.github/workflows/: actions.yml  cruft-update.yml
nomad-{{cookiecutter.plugin_name}}/docs/: index.md
nomad-{{cookiecutter.plugin_name}}/py_sources/src/apps/: __init__.py
nomad-{{cookiecutter.plugin_name}}/py_sources/src/example_uploads/: __init__.py
nomad-{{cookiecutter.plugin_name}}/py_sources/src/normalizers/: __init__.py  mynormalizer.py
nomad-{{cookiecutter.plugin_name}}/src/nomad_{{cookiecutter.module_name}}/: __init__.py  nomad_plugin.yaml
tests/: check_format_diff.py  test_create_template.py  test_final_check.py  test_pyproject_generation.py  test_tox_debug.py
{{cookiecutter.plugin_name}}/: MANIFEST.in  README.md  mkdocs.yml  move_template_files.sh  pyproject.toml
{{cookiecutter.plugin_name}}/.github/workflows/: actions.yml  cruft-update.yml  mkdocs-deploy.yml  publish.yml  publish_north.yml
{{cookiecutter.plugin_name}}/docs/: index.md
{{cookiecutter.plugin_name}}/py_sources/citation_sources/: CITATION.cff  cff_validation.yml
{{cookiecutter.plugin_name}}/py_sources/north_sources/: .dockerignore  publish_north.yml
{{cookiecutter.plugin_name}}/py_sources/src/actions/: __init__.py
{{cookiecutter.plugin_name}}/py_sources/src/actions/simple_action/: __init__.py  activities.py  models.py  workflows.py
{{cookiecutter.plugin_name}}/py_sources/src/apps/: __init__.py
{{cookiecutter.plugin_name}}/py_sources/src/dashboards/: __init__.py  hello.py
{{cookiecutter.plugin_name}}/py_sources/src/example_uploads/: __init__.py
{{cookiecutter.plugin_name}}/py_sources/src/normalizers/: __init__.py  normalizer.py
{{cookiecutter.plugin_name}}/py_sources/src/north_tools/: __init__.py
{{cookiecutter.plugin_name}}/py_sources/src/north_tools/{{ cookiecutter.module_name }}_jupyter/: Dockerfile.jupyter  __init__.py  compile_jupyter_requirements.sh  requirements.in
{{cookiecutter.plugin_name}}/py_sources/src/north_tools/{{cookiecutter.module_name}}/: Dockerfile
{{cookiecutter.plugin_name}}/py_sources/src/north_tools/{{cookiecutter.module_name}}_jupyter/: Dockerfile.jupyter  __init__.py  compile_jupyter_requirements.sh  readme.md  requirements.in
{{cookiecutter.plugin_name}}/py_sources/src/north_tools/{{cookiecutter.module_name}}_jupyter/examples/: CommandLine.ipynb
{{cookiecutter.plugin_name}}/py_sources/src/north_tools/{{cookiecutter.north_tool_name}}/: Dockerfile  README.md  __init__.py  readme.md
{{cookiecutter.plugin_name}}/py_sources/src/parsers/: __init__.py  parser.py  {{cookiecutter.lab_name}}_batch_parser.py  {{cookiecutter.lab_name}}_measurement_parser.py
{{cookiecutter.plugin_name}}/py_sources/src/parsers/file_parser/: ink_recycling_mappers.py
{{cookiecutter.plugin_name}}/py_sources/src/schema_packages/: __init__.py  ink_recycling_package.py  schema_package.py  {{cookiecutter.lab_name}}_package.py
{{cookiecutter.plugin_name}}/py_sources/src/schemas/: __init__.py  schema.py
{{cookiecutter.plugin_name}}/py_sources/src/uis/: __init__.py  streamlit_app.py
{{cookiecutter.plugin_name}}/py_sources/tests/actions/: test_action.py
{{cookiecutter.plugin_name}}/py_sources/tests/apps/: test_app.py
{{cookiecutter.plugin_name}}/py_sources/tests/dashboards/: test_dashboards.py
{{cookiecutter.plugin_name}}/py_sources/tests/example_uploads/: test_example_upload.py
{{cookiecutter.plugin_name}}/py_sources/tests/north_tools/: test_north_tools.py
{{cookiecutter.plugin_name}}/py_sources/tests/parsers/: test_parser.py  test_{{cookiecutter.lab_name}}_batch_parser.py  test_{{cookiecutter.lab_name}}_measurement_parser.py
{{cookiecutter.plugin_name}}/py_sources/tests/uis/: test_uis.py
{{cookiecutter.plugin_name}}/py_sources/tests_data/north_tools/: CommandLine.ipynb
{{cookiecutter.plugin_name}}/py_sources/tests_data/schema_packages/: test.archive.yaml
{{cookiecutter.plugin_name}}/py_sources/tests_data/schemas/: test.archive.yaml
(+8 files in other folders)
