[build-system]
requires = ["setuptools>=61.0.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    {% if cookiecutter.license == "MIT" -%}
    "License :: OSI Approved :: MIT License",
    {%- elif cookiecutter.license == "BSD-3" -%}
    "License :: OSI Approved :: BSD License",
    {%- elif cookiecutter.license == "GNU GPL v3.0+" -%}
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    {%- elif cookiecutter.license == "Apache Software License 2.0" -%}
    "License :: OSI Approved :: Apache Software License",
    {%- elif cookiecutter.license == "Mozilla Public License 2.0" -%}
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    {%- endif %}
]
name = "{{cookiecutter.plugin_name}}"
description = "{{cookiecutter.short_description}}"
version = "{{cookiecutter.version}}"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "{{cookiecutter.full_name}}", email = "{{cookiecutter.email}}" },
]
maintainers = [
    { name = "{{cookiecutter.full_name}}", email = "{{cookiecutter.email}}" },
]
license = { file = "LICENSE" }
dependencies = [
    "nomad-lab>=1.3.0",
    "python-magic-bin; sys_platform == 'win32'",
]

[project.urls]
Repository = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.plugin_name}}"

[project.optional-dependencies]
dev = [
    "ruff", 
    "pytest", 
    "structlog",
    "mkdocs",
    "mkdocs-material==8.1.1",
    "pymdown-extensions",
    "mkdocs-click",    
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4


[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # isort
    "I",
    # pylint
    "PL",
]

ignore = [
    "F403", # 'from module import *' used; unable to detect undefined names
    "PLC0415", # `import` should be at the top-level of a file
]

fixable = ["ALL"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["PLC0415"] # import-outside-top-level

# this is entirely optional, you can remove this if you wish to
[tool.ruff.format]
# use single quotes for strings.
quote-style = "single"

# indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[project.entry-points.'nomad.plugin']
{% if cookiecutter.include_parser  -%}
parser_entry_point = "{{cookiecutter.module_name}}.parsers:parser_entry_point"
{%- endif %}
{% if cookiecutter.include_schema_package  -%}
schema_package_entry_point = "{{cookiecutter.module_name}}.schema_packages:schema_package_entry_point"
{%- endif %}
{% if cookiecutter.include_normalizer  -%}
normalizer_entry_point = "{{cookiecutter.module_name}}.normalizers:normalizer_entry_point"
{%- endif %}
{% if cookiecutter.include_app  -%}
app_entry_point = "{{cookiecutter.module_name}}.apps:app_entry_point"
{%- endif %}
{% if cookiecutter.include_example_uploads  -%}
example_upload_entry_point = "{{cookiecutter.module_name}}.example_uploads:example_upload_entry_point"
{%- endif %}
[tool.cruft]
# Avoid updating workflow files, this leads to permissions issues
skip = [".github/*"]
